--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "login": "firebase login",
+    "init": "firebase init",
+    "deploy": "firebase deploy"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +28,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "firebase": "^4.10.1",
+    "firebase-tools": "^3.17.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
